2011-12-10  Kaz Kylheku  <kaz@kylheku.com>

	* txr.vim (txr_atat): New match. The @@ sequence is recognized
	properly and highlighted.

2011-12-10  Kaz Kylheku  <kaz@kylheku.com>

	Bignum support in mult function.

	* arith.c: Regenerated.

	* arith.txr (CNUM_BIT): New constant.
	(bignum, bignum_dbl_ipt): New static functions.
	(@{add-fname}): Use bignum function.
	(mul): New functions, rewrite of mul from lib.c.

	* lib.c (mul): Function removed.

	* mpi-patches/add-mp-set-intptr (mp_set_intptr): Revised patch.
	Local variable v should be int_ptr_t not unsigned long.
	Also, the mp_set interface doesn't set the sign; it's an unsigned
	interface. We must do that ourselves.

	* mpi-patches/fix-mult-bug: The main multiplication function is
	also broken in the same way, requiring the cast.

	* mpi-patches/mpi-set-double-intptr: Fixed use of wrong type for
	local variable v.

2011-12-10  Kaz Kylheku  <kaz@kylheku.com>

	* mpi-patches/mpi-set-mpi-word: Bugfix and refresh.

	* mpi-patches/mpi-set-double-intptr: New file.

	* mpi-patches/series (mpi-set-double-intptr): Patch added.

2011-12-10  Kaz Kylheku  <kaz@kylheku.com>

	* configure: add to config.h the type double_intptr_t, which
	is twice the size of intptr_t. It may not be available, so
	there is a HAVE_ macro to detect it.

2011-12-10  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): New functions added as intrinsics.

	* hash.c (hash_eql, hash_equal): New external functions.

	* hash.h (hash_eql, hash_equal): Declared.

	* txr.1: Sections added.

2011-12-10  Kaz Kylheku  <kaz@kylheku.com>

	* mpi-patches/add-mp-hash: Rewrote mp_hash to only hash enough
	low-order bit material from the bignum to fill an unsigned long.
	We don't need to walk the entire bignum. If the low order
	digit of the bignum is at least as large as an unsigned long,
	we just take that as the hash, otherwise we take enough of the
	digits to fill an unsigned long. For negative numbers, we just
	invert the bits of the hash.
